# plotikz

./: .gitignore  LICENSE  README.md  agent.py  example.py  pyproject.toml
.github/workflows/: run-agent.yml
examples/: README.md  bar.py  contour.py  contour_overlay.py  heatmap.py  lyapunov_landscape.py  matplotlib_example.py  mpc_trajectories.py  parcoords.py  run_all.py  scatter.py  summary_band.py
src/plotikz/: __init__.py  __main__.py  converter.py  html_parser.py  plotly_converter.py  registry.py  unified.py  utils.py
src/plotikz/handlers/: __init__.py  bar.py  base.py  contour.py  generic.py  heatmap.py  parcoords.py  scatter.py
src/plotikz/matplotlib/: __init__.py  converter.py  extractors.py  translator.py
src/plotikz/plotly/: __init__.py  annotations.py  converter.py  heatmap_contour.py  html_parser.py  options_builder.py  subplots.py
src/plotikz/templates/: default_axis.tex  standalone.tex
tests/: test_converter.py  test_matplotlib_converter.py  test_plotly_converter.py
