[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plotikz"
version = "0.1.0"
description = "Convert Plotly figures into clean LaTeX/TikZ code using PGFPlots and Jinja2"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "plotly>=5.0.0",
    "jinja2>=3.0.0",
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
plotikz = "plotikz.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plotikz = ["templates/*.tex"]
